<resources>
    <string name="app_name">Yummy</string>

    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>

    <string name="sign_up_google">SIGN UP WITH GOOGLE</string>

    <string name="sign_up">SIGN UP</string>

    <string name="sign_in">Sign In</string>

    <string name="already_account">Already Have An Account</string>

    <string name="sign_in_desc">please sign In to continue using our app</string>

    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="re_password">Re-Enter Password</string>

    <string name="fullname">Fullname</string>
    <string name="forget_pass">Forget Password?</string>

    <string name="sign_up_desc">please fill the details and create account</string>

    <string name="password_length_desc">password must be character</string>

    <string name="welcome">Welcome</string>
    <string name="welcome_desc">Create an account and order food online</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
